# DM_Helper_MCP

./: .gitignore  README.md  build-desktop.ps1  desktop_app.py  dev.ps1  main.py  mcp_client.py  mcp_server.py  plan-dmhelper.md  pyproject.toml  run_ui.py
core/: cli.py  cli_chat.py
server/: catalog.py  comparison.py  db.py  jobs.py  profile.py  query_engine.py  relationships.py  reports.py  sql_guard.py
tests/: test_catalog_pairing.py  test_catalog_refresh_fast.py  test_compare_field.py  test_csv_utf16.py  test_db_pairs_fk_repair.py  test_db_path.py  test_export_query_performance.py  test_mcp_compare_mapping_resolution.py  test_mcp_export_query.py  test_mcp_row_count_summary.py  test_profile_payload.py  test_relationships.py  test_report_filenames.py  test_reports_registry.py  test_sql_guard.py  test_ui_ngrok_url.py  test_ui_pair_mapping_suggestions.py  test_ui_relationships.py  test_ui_services_force_stop.py  test_ui_settings.py
ui/: __init__.py  api.py
ui/static/: app.jsx  index.html  styles.css
