[project]
name = "protoquery"
version = "0.1.0"
description = "ProtoQuery - MCP server for comparing source/target data extracts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.51.0",
    "duckdb>=1.0.0",
    "fastapi>=0.115.0",
    "mcp[cli]>=1.8.0",
    "ngrok>=1.7.0; python_version >= '3.12'",
    "openpyxl>=3.1.0",
    "pywebview>=5.4",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
desktop-build = [
    "pyinstaller>=6.10.0",
]

[project.scripts]
protoquery-desktop = "desktop_app:main"
